// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<RevealablePasswordInput /> > renders different classes depending on the size 1`] = `
<input
  class="tw:outline-none tw:w-full tw:focus-ring tw:px-2 tw:py-1 tw:text-sm tw:rounded-md tw:border tw:border-lm-input-border tw:dark:border-dm-input-border tw:bg-lm-primary tw:dark:bg-dm-primary tw:group-[&]/card:bg-lm-input tw:group-[&]/card:dark:bg-dm-input tw:pr-8"
  data-testid="input"
  type="password"
/>
`;

exports[`<RevealablePasswordInput /> > renders different classes depending on the size 2`] = `
<input
  class="tw:outline-none tw:w-full tw:focus-ring tw:px-3 tw:py-1.5 tw:rounded-md tw:border tw:border-lm-input-border tw:dark:border-dm-input-border tw:bg-lm-primary tw:dark:bg-dm-primary tw:group-[&]/card:bg-lm-input tw:group-[&]/card:dark:bg-dm-input tw:pr-10"
  data-testid="input"
  type="password"
/>
`;

exports[`<RevealablePasswordInput /> > renders different classes depending on the size 3`] = `
<input
  class="tw:outline-none tw:w-full tw:focus-ring tw:px-4 tw:py-2 tw:text-xl tw:rounded-md tw:border tw:border-lm-input-border tw:dark:border-dm-input-border tw:bg-lm-primary tw:dark:bg-dm-primary tw:group-[&]/card:bg-lm-input tw:group-[&]/card:dark:bg-dm-input tw:pr-10"
  data-testid="input"
  type="password"
/>
`;
